syntax = "proto3";

enum PermissionItem {
    ALLOW_TO_MOVE_PLAYER_INSIDE_SCENE = 0;
    ALLOW_TO_TRIGGER_AVATAR_EMOTE = 1;
    USE_WEB3_API = 2;
    USE_WEBSOCKET = 3;
    USE_FETCH = 4;
}

message PermissionResponse {
    bool has_permission = 1;
}

message HasPermissionRequest {
    PermissionItem permission = 1;
}

message HasManyPermissionRequest {
    repeated PermissionItem permission = 1;
}

service PermissionsService {
    rpc hasPermission(HasPermissionRequest) returns (PermissionResponse) {}
    rpc hasManyPermissions(HasManyPermissionRequest) returns (PermissionResponse) {}
}